add industry category

--- a/config/valid_categories.yaml
+++ b/config/valid_categories.yaml
@@ -52,3 +52,20 @@ DevType:
 - Senior executive (C-suite, VP, etc.)
 - Student
 - System administrator
+Industry:
+- Banking/Financial Services
+- Computer Systems Design and Services
+- Energy
+- Fintech
+- Government
+- Healthcare
+- Higher Education
+- Insurance
+- Internet, Telecomm or Information Services
+- Manufacturing
+- Media & Advertising Services
+- Other
+- 'Other:'
+- Retail and Consumer Services
+- Software Development
+- Transportation, or Supply Chain
