--- a/config/valid_categories.yaml
+++ b/config/valid_categories.yaml
@@ -69,3 +69,11 @@ Industry:
 - Retail and Consumer Services
 - Software Development
 - Transportation, or Supply Chain
+Age:
+- 18-24 years old
+- 25-34 years old
+- 35-44 years old
+- 45-54 years old
+- 55-64 years old
+- 65 years or older
+- Other
