--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "ruff>=0.15.0",
     "pyyaml>=6.0.0",
     "numpy>=2.4.2",
+    "optuna>=4.0.0",
     "radon>=6.0.1",
     "pip-audit>=2.10.0",
     "bandit>=1.9.3",
