--- a/config/currency_rates.yaml
+++ b/config/currency_rates.yaml
@@ -26,6 +26,10 @@ Denmark:
   code: DKK
   name: Danish krone
   rate: 6.43
+Finland:
+  code: EUR
+  name: European Euro
+  rate: 0.86
 France:
   code: EUR
   name: European Euro
@@ -34,18 +38,42 @@ Germany:
   code: EUR
   name: European Euro
   rate: 0.86
+Greece:
+  code: EUR
+  name: European Euro
+  rate: 0.86
+Hungary:
+  code: HUF
+  name: Hungarian forint
+  rate: 345.82
 India:
   code: INR
   name: Indian rupee
   rate: 86.03
+Israel:
+  code: ILS
+  name: Israeli new shekel
+  rate: 3.4
 Italy:
   code: EUR
   name: European Euro
   rate: 0.86
+Mexico:
+  code: MXN
+  name: Mexican peso
+  rate: 19.0
 Netherlands:
   code: EUR
   name: European Euro
   rate: 0.86
+New Zealand:
+  code: NZD
+  name: New Zealand dollar
+  rate: 1.66
+Norway:
+  code: NOK
+  name: Norwegian krone
+  rate: 10.12
 Poland:
   code: PLN
   name: Polish zloty
@@ -54,6 +82,14 @@ Portugal:
   code: EUR
   name: European Euro
   rate: 0.86
+Romania:
+  code: RON
+  name: Romanian leu
+  rate: 4.35
+South Africa:
+  code: ZAR
+  name: South African rand
+  rate: 17.74
 Spain:
   code: EUR
   name: European Euro
@@ -66,6 +102,10 @@ Switzerland:
   code: CHF
   name: Swiss franc
   rate: 0.81
+Turkey:
+  code: TRY
+  name: Turkish lira
+  rate: 39.61
 Ukraine:
   code: UAH
   name: Ukrainian hryvnia
