--- a/config/model_parameters.yaml
+++ b/config/model_parameters.yaml
@@ -1,13 +1,13 @@
 data:
   min_salary: 1000
-  lower_percentile: 2
-  upper_percentile: 98
+  lower_percentile: 1
+  upper_percentile: 99
   salary_scale: 0.001
   test_size: 0.2
   random_state: 42
 features:
   cardinality:
-    max_categories: 20
+    max_categories: 30
     min_frequency: 50
     other_category: Other
     drop_other_from:
@@ -20,21 +20,21 @@ features:
     drop_first: true
 model:
   n_estimators: 5000
-  learning_rate: 0.05963413021247507
+  learning_rate: 0.038748205464460075
   max_depth: 3
-  min_child_weight: 20
+  min_child_weight: 13
   random_state: 42
   n_jobs: -1
   early_stopping_rounds: 50
-  subsample: 0.9259971339904378
-  colsample_bytree: 0.8104418840320677
-  reg_alpha: 0.00020079319919233748
-  reg_lambda: 0.035007213429529116
-  gamma: 3.3605247926570816
+  subsample: 0.9005941576389449
+  colsample_bytree: 0.6523775485743067
+  reg_alpha: 0.056985877244299196
+  reg_lambda: 0.00027538312197632507
+  gamma: 3.915581947997305
 training:
   verbose: false
   save_model: true
   model_path: models/model.pkl
 guardrails:
-  min_r2_per_category: 0.2
-  max_abs_pct_diff: 20
+  max_mape_per_category: 100
+  max_abs_pct_diff: 100
