--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "radon>=6.0.1",
     "pip-audit>=2.10.0",
     "bandit>=1.9.3",
+    "pre-commit>=4.5.1",
 ]
 
 [project.optional-dependencies]
