--- a/config/valid_categories.yaml
+++ b/config/valid_categories.yaml
@@ -93,3 +93,13 @@ Age:
 ICorPM:
 - Individual contributor
 - People manager
+OrgSize:
+- 1,000 to 4,999 employees
+- 10,000 or more employees
+- 100 to 499 employees
+- 20 to 99 employees
+- 5,000 to 9,999 employees
+- 500 to 999 employees
+- I don't know
+- Just me - I am a freelancer, sole proprietor, etc.
+- Less than 20 employees
