--- a/config/currency_rates.yaml
+++ b/config/currency_rates.yaml
@@ -1,3 +1,7 @@
+Argentina:
+  code: ARS
+  name: Argentine peso
+  rate: 1172.26
 Australia:
   code: AUD
   name: Australian dollar
@@ -6,6 +10,10 @@ Austria:
   code: EUR
   name: European Euro
   rate: 0.86
+Bangladesh:
+  code: BDT
+  name: Bangladeshi taka
+  rate: 122.22
 Belgium:
   code: EUR
   name: European Euro
@@ -14,10 +22,18 @@ Brazil:
   code: BRL
   name: Brazilian real
   rate: 5.49
+Bulgaria:
+  code: BGN
+  name: Bulgarian lev
+  rate: 1.69
 Canada:
   code: CAD
   name: Canadian dollar
   rate: 1.37
+Colombia:
+  code: COP
+  name: Colombian peso
+  rate: 4086.91
 Czech Republic:
   code: CZK
   name: Czech koruna
@@ -50,6 +66,10 @@ India:
   code: INR
   name: Indian rupee
   rate: 86.03
+Ireland:
+  code: EUR
+  name: European Euro
+  rate: 0.86
 Israel:
   code: ILS
   name: Israeli new shekel
@@ -58,6 +78,10 @@ Italy:
   code: EUR
   name: European Euro
   rate: 0.86
+Japan:
+  code: JPY
+  name: Japanese yen
+  rate: 144.74
 Mexico:
   code: MXN
   name: Mexican peso
@@ -74,6 +98,10 @@ Norway:
   code: NOK
   name: Norwegian krone
   rate: 10.12
+Pakistan:
+  code: PKR
+  name: Pakistani rupee
+  rate: 284.77
 Poland:
   code: PLN
   name: Polish zloty
@@ -86,6 +114,10 @@ Romania:
   code: RON
   name: Romanian leu
   rate: 4.35
+Russian Federation:
+  code: RUB
+  name: Russian ruble
+  rate: 78.37
 South Africa:
   code: ZAR
   name: South African rand
