--- a/config/valid_categories.yaml
+++ b/config/valid_categories.yaml
@@ -107,3 +107,9 @@ OrgSize:
 - I don't know
 - Just me - I am a freelancer, sole proprietor, etc.
 - Less than 20 employees
+Employment:
+- Employed
+- Independent contractor, freelancer, or self-employed
+- Not employed
+- Retired
+- Student
